# MusicApp-Trabalho-Pratico

./: .gitignore  CMakeLists.txt  MusicApp  README.md  main.cpp  usuarios.txt
data/: Musicas.json  Playlists.json  Usuarios.json
include/: Autenticacao.h  JsonService.h  Login.h  Menu.h  Musica.h  Playlist.h  Registro.h  Services.h  Usuario.h  UsuarioFree.h  UsuarioPremium.h
src/: Autenticacao.cpp  JsonService.cpp  Login.cpp  Menu.cpp  Musica.cpp  Playlist.cpp  Registro.cpp  Services.cpp  Usuario.cpp  UsuarioFree.cpp  UsuarioPremium.cpp
tests/: AutenticacaoTeste.cpp  JSONServiceTeste.cpp  PlaylistTeste.cpp
